# mlb_mcp

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.comprehensive  Dockerfile.debug  Dockerfile.fixed  Dockerfile.minimal  Dockerfile.minimal_debug  Dockerfile.original  Dockerfile.smithery  Dockerfile.test  Procfile  README.md  VERIFICATION_SUMMARY.md  __main__.py  batting_columns.json  main.py  main_comprehensive.py  main_debug_logging.py  main_dynamic.py  main_fixed.py  main_minimal.py  main_minimal_debug.py  main_smithery.py  main_test.py  mcp_stdio_wrapper.py  openapi.html  pitching_columns.json  pyproject.toml  requirements-minimal.txt  requirements.txt  server.py  smithery-dynamic.yaml  smithery-test.yaml  smithery.yaml  start-minimal.sh  start.sh  test_health.py  test_mcp_stdio.sh  (+3 more)
mlb_mcp/: server.py
src/mlb_mcp/: __init__.py  __main__.py  server.py
